Sgproj 1410 - Corrects naming (#5)
* Adds the pre-commit checks to the module.

* Renames the repo to match Harshicorp Naming for modules.

* Fixes typos.

* Fixed incorrect TF Version

* TF Docs fixed Readme

* Updated examples with proper module source

Co-authored-by: Wesley Kirkland <wesley.kirkland@stratusgrid.com>
Co-authored-by: Wesley Kirkland <92735382+wesleykirklandsg@users.noreply.github.com>

--- a/.config/.terraform-docs.yml
+++ b/.config/.terraform-docs.yml
@@ -2,14 +2,14 @@ version: ""
 
 formatter: markdown table
 
-name: cloudwatch-tf-war-alarms
+name: terraform-aws-cloudwatch-alarms
 
 content: |-
-  # cloudwatch-tf-war-alarms
+  # terraform-aws-cloudwatch-alarms
 
-  GitHub: [https://github.com/StratusGrid/cloudwatch-tf-war-alarms)
+  GitHub: [StratusGrid/terraform-aws-cloudwatch-alarms](https://github.com/StratusGrid/terraform-aws-cloudwatch-alarms)
 
-  This module will create a bunch or rules to cover the security alarms of a Well Architected Review.
+  This module will create multiple rules to cover the security alarms of a Well Architected Review.
 
   ## Examples
 
